fixed scroll issue

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,3 +11,10 @@
 .mails {
     margin-right: 2%;
 }
+
+.header {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1000;
+}
