--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
     overflow-x: scroll;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .card-image {
     min-height: 300px;
     height: 30rem;
@@ -21,4 +27,8 @@
 
 .miniCard:hover {
     background-color:aliceblue;
+}
+
+.consulting-heading {
+    font-size: 2em;
 }
